--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -23,10 +23,10 @@ label {
   monitor =
   text = $TIME
   color = $text
-  font_size = 90
+  font_size = 140
   font_family = SF Pro Rounded Bold
-  position = -30, 0
-  halign = right
+  position = 0, -220
+  halign = center
   valign = top
 }
 
@@ -37,8 +37,8 @@ label {
   color = $text
   font_size = 25
   font_family = $font
-  position = -30, -150
-  halign = right
+  position = 0, -180
+  halign = center
   valign = top
 }
 
