remapped power button

--- a/.config/hypr/config/binding.conf
+++ b/.config/hypr/config/binding.conf
@@ -62,6 +62,7 @@ bind = SUPER, O, exec, playerctl -p spotify next
 bind = , Print, exec, ~/.config/hypr/bin/screenshot.sh
 bind = SUPER, Print, exec, ~/.config/hypr/bin/colorpicker.sh
 bind = SUPER SHIFT, X, exec, ~/.config/hypr/bin/powermenu.sh 
+bind = , XF86PowerOff, exec, ~/.config/hypr/bin/powermenu.sh
 bind = SUPER, C, exec, ~/.config/hypr/bin/floating.sh
 bind = SUPER CTRL, M, exec, ~/.config/hypr/bin/caffeine.sh toggle 
 bind = SUPER, V, exec, ~/.config/hypr/bin/clipboard.sh
