switched to swww and focus_mode script

--- a/.config/hypr/config/decoration.conf
+++ b/.config/hypr/config/decoration.conf
@@ -3,6 +3,8 @@ decoration {
   rounding_power = 5
 	active_opacity = 1.0
 	inactive_opacity = 1.0
+	dim_inactive = false
+	dim_strength = 0.3
 
 	shadow {
 		enabled = true
