--- a/.config/hypr/config/rule.conf
+++ b/.config/hypr/config/rule.conf
@@ -1,37 +1,58 @@
-layerrule = blur, quickshell
-layerrule = ignorealpha 0, quickshell
+layerrule = match:class quickshell, blur 1
+layerrule = match:class quickshell, ignore_alpha 0
 
-layerrule = blur, rofi
-layerrule = ignorealpha 0.50, rofi
+layerrule = match:class rofi, blur 1
+layerrule = match:class rofi, ignore_alpha 0
+layerrule = match:class rofi, ignore_alpha 0.5
 
-layerrule = blur, waybar
+layerrule = match:class waybar, blur 1
 
-layerrule = blur, swayosd
-layerrule = ignorealpha 0, swayosd
-layerrule = ignorealpha 0.5, swayosd
+layerrule = match:class swayosd, blur 1
+layerrule = match:class swayosd, ignore_alpha 0
+layerrule = match:class swayosd, ignore_alpha 0.5
 
-layerrule = blur, swaync-notification-window
-layerrule = ignorealpha 0, swaync-notification-window
-layerrule = ignorealpha 0.3, swaync-notification-window
+layerrule = match:class swaync-notification-window, blur 1
+layerrule = match:class swaync-notification-window, ignore_alpha 0
+layerrule = match:class swaync-notification-window, ignore_alpha 0.3
 
-windowrule = opacity 0.8, class:^(nemo)$
-windowrule = opacity 0.8, class:^(jetbrains-.*)$
-windowrule = opacity 0.8, class:^(.*Thunderbird.*)$
-windowrule = opacity 0.8, class:^(clipse-gui)$
-windowrule = opacity 0.8, class:^(spotify)$
+windowrule = match:class nemo, opacity 0.8
+windowrule = match:class jetbrains-.*, opacity 0.8
+windowrule = match:class .*Thunderbird.*, opacity 0.8
+windowrule = match:class clipse-gui, opacity 0.8
 
 # Make clipse-gui always floating and centered
-windowrule = float, class:^(clipse-gui)$
+windowrule = match:class clipse-gui, float 1
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule = match:class .*, suppress_event maximize
 
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
 
 # Fix JetBrains IDEs messing up dialog like Search Everywhere
-windowrule = keepaspectratio, class:^(jetbrains-.*)$,title:^$
-windowrule = stayfocused, class:^(jetbrains-.*)$,title:^$,floating:1
+windowrule {
+		name = jetbrains-search-everywhere-fix
+		match:class = ^(jetbrains-.*)$
+		match:title = ^$
+		match:float = true
+		focus_on_activate = true
+		stay_focused = true
+		keep_aspect_ratio = true
+} 
 
-# Spotify goes to the special workspace
-windowrule = workspace special, class:^(spotify)$
+windowrule {
+	name = spotify rules
+	match:class = ^(spotify)$
+	workspace = special
+	opacity = 0.8
+}
