--- a/.config/hypr/config/autostart.conf
+++ b/.config/hypr/config/autostart.conf
@@ -1,7 +1,6 @@
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1 &
 exec-once = hypridle &
-exec-once = hyprpaper &
 exec-once = hyprsunset &
 exec-once = waybar &
 exec-once = nm-applet &
@@ -10,3 +9,4 @@ exec-once = swayosd-server &
 exec-once = clipse -listen &
 exec-once = quickshell -c ~/.config/quickshell/Dock &
 exec-once = wl-clip-persist --clipboard both &
+exec-once = ~/.config/hypr/bin/wallpaper.sh init &
