--- a/.config/hypr/config/binding.conf
+++ b/.config/hypr/config/binding.conf
@@ -67,6 +67,9 @@ bind = SUPER, C, exec, ~/.config/hypr/bin/floating.sh
 bind = SUPER CTRL, M, exec, ~/.config/hypr/bin/caffeine.sh toggle 
 bind = SUPER, V, exec, ~/.config/hypr/bin/clipboard.sh
 bind = SUPER SHIFT, V, exec, ~/.config/hypr/bin/clipboard.sh clear
+bind = SUPER, B, exec, ~/.config/hypr/bin/focus_mode.sh
+# SUPER CTRL B to toggle waybar
+bind = SUPER CTRL, B, exec, pkill -USR1 waybar
 
 # Volume Control
 bind = , XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise 
